syntax = "proto3";

option go_package = "github.com/MauricioGZ/GRPC-GO/proto";

package orders_service;

service OrdersService {
  rpc GetMenu(GetMenuRequest) returns (stream GetMenuResponse);
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message Product {
  uint32 productID = 1  [ json_name = "product_id" ];
  string name = 2       [ json_name = "name" ];
  float price = 3       [ json_name = "price" ];
}

message OrderItem {
  uint32 productID = 2;
  uint32 quantity = 3;
}

message GetMenuRequest {}

message GetMenuResponse {
  Product product = 1 [ json_name = "product" ];
}

message CreateOrderRequest {
  uint32 customerID = 1;
  repeated OrderItem orderItems = 2;
}

message CreateOrderResponse {
  uint32 orderID = 1;
}

message ListOfProducts {
  repeated Product products = 1 [ json_name = "products" ];
}